test/regress/coverage-op-eval-errors.test
; Coverage for op.cc expression evaluation errors
; Tests unknown identifier and self-referential variable definition

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --display "bogus_var > 0" -> 1
__ERROR__
While evaluating value expression:
  (bogus_var > 0)
   ^^^^^^^^^
While handling posting from "$FILE", line 5:
>     Expenses:Food    $10.00
Error: Unknown identifier 'bogus_var'
end test

test eval "x = x; x" -> 0
end test
